--- a/package.json
+++ b/package.json
@@ -16,15 +16,22 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@apollo/server": "^4.9.5",
     "@types/express": "^4.17.21",
+    "@types/lodash": "^4.14.201",
     "@types/morgan": "^1.9.9",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "eslint": "^8.53.0",
     "express": "^4.18.2",
+    "graphql": "^16.8.1",
+    "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.3",
-    "typescript": "^5.2.2"
+    "prisma": "^5.6.0",
+    "typescript": "^5.2.2",
+    "winston": "^3.11.0",
+    "winston-daily-rotate-file": "^4.7.1"
   }
 }
