--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "module": "index.ts",
   "type": "module",
   "devDependencies": {
+    "@graphql-codegen/cli": "^5.0.0",
+    "@graphql-codegen/typescript": "^4.0.1",
+    "@graphql-codegen/typescript-document-nodes": "4.0.1",
+    "@graphql-codegen/typescript-resolvers": "^4.0.1",
+    "@parcel/watcher": "^2.3.0",
     "bun-types": "latest"
   },
   "scripts": {
@@ -10,7 +15,9 @@
     "prettier": "prettier --write \"src/**/*.ts\"",
     "lint:fix": "eslint --fix \"src/**/*.ts\"",
     "lint": "eslint \"src/**/*.ts\"",
-    "dev": "bun run --hot ./src/app.ts"
+    "dev": "bun run --hot ./src/app.ts",
+    "codegen": "graphql-codegen --config codegen.ts",
+    "codegen:generate": "graphql-codegen"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
